--- a/client/src/components/main/home/Home.scss
+++ b/client/src/components/main/home/Home.scss
@@ -1,8 +1,5 @@
 .home_wrap {
-  margin-top: 40px;
-  width: 860px;
-
   .home_inner_area {
-    padding-left: 64px;
+    padding-left: 6.4rem;
   }
 }
