--- a/client/src/components/popover/trello/TrelloPopover.scss
+++ b/client/src/components/popover/trello/TrelloPopover.scss
@@ -1,46 +1,46 @@
 .trello_popover {
   position: absolute;
-  top: 40px;
+  top: 4rem;
   left: 0;
   z-index: 10;
 
   .trello_popover_content {
     background-color: #ffffff;
-    border-radius: 3px;
-    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+    border-radius: 0.3rem;
+    box-shadow: 0 0.8rem 1.6rem -0.4rem rgba(9, 30, 66, 0.25), 0 0 0 0.1rem rgba(9, 30, 66, 0.08);
 
     .trello_popover_inner {
-      width: 300px;
+      width: 30rem;
 
       .trello_popover_title {
-        margin: 0 12px 8px;
+        margin: 0 1.2rem 0.8rem;
         color: #5e6c84;
-        font-size: 14px;
-        line-height: 40px;
+        font-size: 1.4rem;
+        line-height: 4rem;
         text-align: center;
-        border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+        border-bottom: 0.1rem solid rgba(9, 30, 66, 0.13);
       }
 
       ul {
-        padding-bottom: 12px;
+        padding-bottom: 1.2rem;
 
         li {
           &.line_break::after {
             background-color: rgba(9, 30, 66, 0.13);
             content: ' ';
             display: block;
-            height: 1px;
-            margin: 8px auto;
-            width: calc(100% - 20px);
+            height: 0.1rem;
+            margin: 0.8rem auto;
+            width: calc(100% - 2rem);
           }
 
           .actions_title {
             position: relative;
             overflow: hidden;
             color: #172b4d;
-            font-size: 14px;
-            line-height: 20px;
-            padding: 6px 12px;
+            font-size: 1.4rem;
+            line-height: 2rem;
+            padding: 0.6rem 1.2rem;
             cursor: pointer;
           }
 
@@ -51,15 +51,15 @@
           button {
             position: absolute;
             top: 0;
-            right: 10px;
-            width: 100px;
-            height: 32px;
-            font-size: 12px;
+            right: 1rem;
+            width: 10rem;
+            height: 3.2rem;
+            font-size: 1.2rem;
             color: #ffffff;
             background-color: #cd3232;
             text-align: center;
-            line-height: 32px;
-            border-radius: 3px;
+            line-height: 3.2rem;
+            border-radius: 0.3rem;
           }
         }
       }
