--- a/client/src/pages/login/Login.scss
+++ b/client/src/pages/login/Login.scss
@@ -3,48 +3,48 @@
     text-align: center;
 
     img {
-      width: 140px;
-      height: 43px;
-      margin: 40px 0;
+      width: 14rem;
+      height: 4.3rem;
+      margin: 4rem 0;
     }
   }
 
   .form_wrap {
-    width: 330px;
-    height: 370px;
-    padding: 25px 40px;
+    width: 41rem;
+    height: 42rem;
+    padding: 2.5rem 4rem;
     margin: 0 auto;
     background-color: #ffffff;
-    border-radius: 3px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 0 10px;
+    border-radius: 0.3rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 0 1rem;
 
     h1 {
       text-align: center;
       color: #5e6c84;
-      font-size: 16px;
-      letter-spacing: -0.01em;
-      line-height: 28px;
-      margin-top: 10px;
-      margin-bottom: 25px;
+      font-size: 1.6rem;
+      letter-spacing: -0.01rem;
+      line-height: 2.8rem;
+      margin-top: 1rem;
+      margin-bottom: 2.5rem;
     }
 
     input {
-      width: calc(100% - 18px);
-      height: 26px;
-      padding: 7px;
-      border: 2px solid #dfe1e6;
-      margin: 0 0 1.2em;
+      width: 100%;
+      height: 4rem;
+      padding: 0.7rem;
+      border: 0.2rem solid #dfe1e6;
+      margin: 0 0 1.6rem;
       transition: border 0.3s;
       background-color: #fafbfc;
 
       &:focus {
-        border: 2px solid #4c9aff;
+        border: 0.2rem solid #4c9aff;
       }
     }
 
     .login_button {
       width: 100%;
-      height: 36px;
+      height: 3.6rem;
       text-align: center;
       color: #ffffff;
       background-color: #5aac44;
@@ -56,12 +56,12 @@
     }
 
     .auth_utils {
-      margin-top: 18px;
+      margin-top: 1.8rem;
       display: flex;
       justify-content: center;
       .find_pw,
       .sign_up {
-        font-size: 14px;
+        font-size: 1.4rem;
         font-weight: 100;
         color: #0052cc;
         cursor: pointer;
@@ -73,10 +73,10 @@
       }
 
       i {
-        padding: 0 6px;
+        padding: 0 0.6rem;
         font-weight: 700;
         color: #555;
-        line-height: 20px;
+        line-height: 2rem;
       }
     }
   }
