--- a/client/src/components/dialog/createBoard/Dialog_create_board.scss
+++ b/client/src/components/dialog/createBoard/Dialog_create_board.scss
@@ -1,8 +1,8 @@
 .create_board_dialog {
-  width: 404px;
+  width: 40rem;
   position: fixed;
   left: 50%;
-  top: 50px;
+  top: 5rem;
   transform: translateX(-50%);
   z-index: 11;
 
@@ -11,27 +11,28 @@
     justify-content: space-between;
 
     .board_card {
-      width: 276px;
-      height: 80px;
-      padding: 8px 10px;
-      border-radius: 3px;
+      width: 27.6rem;
+      height: 9.6rem;
+      padding: 0.8rem 1rem;
+      border-radius: 0.3rem;
       position: relative;
 
       svg {
         color: #fff;
         position: absolute;
-        right: 5px;
-        top: 5px;
+        right: 0.5rem;
+        top: 0.5rem;
+        font-size: 1.6rem;
         cursor: pointer;
       }
 
       input {
-        width: 236px;
-        height: 28px;
+        width: 23.6rem;
+        height: 2.8rem;
         font-weight: 700;
         background-color: transparent;
         color: #fff;
-        text-indent: 10px;
+        text-indent: 1rem;
 
         &:hover {
           background-color: rgba(255, 255, 255, 0.15);
@@ -51,17 +52,14 @@
       }
     }
 
-    .card_background {
-      width: 100px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
-      .choice_card {
-        width: 28px;
-        height: 28px;
-        margin-bottom: 6px;
-        border-radius: 3px;
+    .choose_background {
+      display: grid;
+      grid-template-columns: repeat(3, 2.8rem);
+      grid-gap: 0.6rem;
+      .choose_background_item {
+        width: 2.8rem;
+        height: 2.8rem;
+        border-radius: 0.3rem;
         overflow: hidden;
         background-color: #000;
         cursor: pointer;
@@ -74,8 +72,8 @@
           justify-content: center;
 
           svg {
-            width: 10px;
-            height: 10px;
+            width: 1rem;
+            height: 1rem;
             color: #fff;
           }
         }
@@ -89,17 +87,17 @@
   }
 
   .bottom_utils {
-    margin-top: 8px;
+    margin-top: 0.8rem;
 
     button {
-      width: 104px;
-      height: 32px;
-      font-size: 12px;
+      width: 10.4rem;
+      height: 3.2rem;
+      font-size: 1.2rem;
       color: #ffffff;
       background-color: #5aac44;
       text-align: center;
-      line-height: 32px;
-      border-radius: 3px;
+      line-height: 3.2rem;
+      border-radius: 0.3rem;
 
       &:disabled {
         color: #a5adba;
