--- a/client/src/components/main/template/template.scss
+++ b/client/src/components/main/template/template.scss
@@ -1,8 +1,5 @@
 .template_wrap {
-  margin-top: 40px;
-  width: 860px;
-
   .template_inner_area {
-    padding-left: 64px;
+    padding-left: 6.4rem;
   }
 }
