--- a/client/src/components/popover/user/UserPopover.scss
+++ b/client/src/components/popover/user/UserPopover.scss
@@ -1,35 +1,35 @@
 .user_popover {
   position: absolute;
-  top: 40px;
+  top: 4rem;
   right: 0;
   z-index: 10;
 
   .user_popover_content {
     background-color: #ffffff;
-    border-radius: 3px;
-    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+    border-radius: 0.3rem;
+    box-shadow: 0 0.8rem 1.6rem -0.4rem rgba(9, 30, 66, 0.25), 0 0 0 0.1rem rgba(9, 30, 66, 0.08);
 
     .user_popover_inner {
-      width: 300px;
+      width: 30rem;
 
       .user_popover_title {
-        margin: 0 12px 8px;
+        margin: 0 1.2rem 0.8rem;
         color: #5e6c84;
-        font-size: 14px;
-        line-height: 40px;
+        font-size: 1.4rem;
+        line-height: 4rem;
         text-align: center;
-        border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+        border-bottom: 0.1rem solid rgba(9, 30, 66, 0.13);
       }
 
       ul {
-        padding-bottom: 12px;
+        padding-bottom: 1.2rem;
 
         li {
           > div {
             color: #172b4d;
-            font-size: 14px;
-            line-height: 20px;
-            padding: 6px 12px;
+            font-size: 1.4rem;
+            line-height: 2rem;
+            padding: 0.6rem 1.2rem;
             cursor: pointer;
           }
 
@@ -41,9 +41,9 @@
             background-color: rgba(9, 30, 66, 0.13);
             content: ' ';
             display: block;
-            height: 1px;
-            margin: 8px auto;
-            width: calc(100% - 20px);
+            height: 0.1rem;
+            margin: 0.8rem auto;
+            width: calc(100% - 2rem);
           }
         }
       }
