--- a/client/src/components/trello/TrelloList.scss
+++ b/client/src/components/trello/TrelloList.scss
@@ -1,11 +1,11 @@
 .trello_list_wrapper {
-  min-width: 272px;
-  margin: 0 4px;
-  height: calc(100% - 8px);
+  min-width: 27.2rem;
+  margin: 0 0.4rem;
+  height: 100%;
   box-sizing: border-box;
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
-  margin-bottom: 8px;
-  padding-bottom: 8px;
+  margin-bottom: 0.8rem;
+  padding-bottom: 0.8rem;
 }
