--- a/client/src/components/trello/trelloItem/TrelloItem.scss
+++ b/client/src/components/trello/trelloItem/TrelloItem.scss
@@ -2,23 +2,24 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  border-radius: 3px;
+  border-radius: 0.3rem;
   max-height: 100%;
   white-space: normal;
   background-color: #ebecf0;
 
   .trello_list_header {
     position: relative;
-    padding: 6px 8px;
+    padding: 0.6rem 0.8rem;
     textarea {
-      width: 212px;
-      height: 20px;
-      line-height: 20px;
-      min-height: 12px;
-      max-height: 256px;
+      width: 22.8rem;
+      height: 2.8rem;
+      line-height: 2rem;
+      min-height: 1.2rem;
+      max-height: 25.6rem;
       display: block;
-      padding: 4px 8px;
+      padding: 0.4rem 0.8rem;
       color: #172b4d;
+      font-size: 1.4rem;
       font-weight: 600;
       resize: none;
       overflow: hidden;
@@ -27,26 +28,27 @@
       cursor: pointer;
 
       &:focus {
-        box-shadow: inset 0 0 0 2px #0079bf;
+        box-shadow: inset 0 0 0 0.2rem #0079bf;
         background-color: #fff;
       }
     }
 
     .trello_list_more {
       position: absolute;
-      right: 4px;
-      top: 4px;
+      right: 0.4rem;
+      top: 0.4rem;
       .trello_popover_wrapper {
         position: relative;
         .trello_list_more_icon {
-          width: 32px;
-          height: 32px;
-          border-radius: 3px;
+          width: 3.2rem;
+          height: 3.2rem;
+          border-radius: 0.3rem;
           display: flex;
           align-items: center;
           justify-content: center;
           cursor: pointer;
           svg {
+            font-size: 1.6rem;
             color: #6b778c;
           }
           &:hover {
@@ -62,16 +64,17 @@
 
   .trello_list_composer {
     position: relative;
-    padding: 6px 8px;
-    margin-bottom: 9px;
+    padding: 0.6rem 0.8rem;
+    margin-bottom: 0.9rem;
 
     .trello_list_add_card {
       display: flex;
-      font-size: 14px;
+      font-size: 1.4rem;
       color: #5e6c84;
       svg {
-        width: 20px;
-        height: 20px;
+        width: 2rem;
+        height: 2rem;
+        font-size: 1.6rem;
       }
     }
   }
