--- a/client/src/hoc/layout/SideBar.scss
+++ b/client/src/hoc/layout/SideBar.scss
@@ -1,68 +1,56 @@
-.main_screen {
-  padding-top: 40px;
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
+.side_bar_wrap {
+  grid-area: sidebar;
+  padding: 0 1.6rem;
+  ul {
+    .navigation_item {
+      a {
+        height: 3.2rem;
+        display: flex;
+        align-items: center;
+        margin-bottom: 0.4rem;
+        padding: 0.6rem 0.8rem;
+        font-size: 1.4rem;
+        font-weight: 700;
+        text-decoration: none;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        transition: all 0.1s;
 
-  .side_bar_wrap {
-    padding: 0 16px;
-    ul {
-      margin-top: 40px;
-      width: 240px;
-
-      .navigation_item {
-        a {
-          width: calc(100% - 16px);
-          height: 20px;
-          display: flex;
-          align-items: center;
-          margin-bottom: 4px;
-          padding: 6px 8px;
-          font-size: 14px;
-          font-weight: 700;
-          text-decoration: none;
-          border-radius: 3px;
-          cursor: pointer;
-          transition: all 0.1s;
-
-          svg {
-            margin-top: 2px;
-            color: #42526e;
-          }
-
-          span {
-            text-indent: 4px;
-            color: #172b4d;
-          }
+        svg {
+          margin-top: 0.2rem;
+          color: #42526e;
         }
 
-        a:active,
-        a.active {
-          background-color: #e4f0f6;
+        span {
+          text-indent: 0.4rem;
+          color: #172b4d;
+        }
+      }
 
-          span {
-            color: #0079bf;
-          }
+      a:active,
+      a.active {
+        background-color: #e4f0f6;
 
+        span {
+          color: #0079bf;
+        }
+
+        svg {
+          color: #0079bf;
+        }
+
+        &:hover {
           svg {
             color: #0079bf;
           }
-
-          &:hover {
-            svg {
-              color: #0079bf;
-            }
-          }
         }
+      }
 
-        a:hover {
-          background-color: #e7e9ed;
+      a:hover {
+        background-color: #e7e9ed;
 
-          svg {
-            color: #3b4962;
-          }
+        svg {
+          color: #3b4962;
         }
       }
     }
