--- a/client/src/hoc/layout/gnb/gnbLoading/GnbLoading.scss
+++ b/client/src/hoc/layout/gnb/gnbLoading/GnbLoading.scss
@@ -1,5 +1,5 @@
-@mixin common_animation {
-  width: 7px;
+@mixin common_animation() {
+  width: 0.7rem;
   align-self: flex-end;
   background-color: #fff;
   animation-duration: 2s;
@@ -7,21 +7,21 @@
   animation-direction: alternate;
 }
 
-@mixin common_logo {
-  height: 30px;
-  position: absolute;
-  top: calc(50% - 0.1px);
-  left: calc(50% - 0.1px);
+@mixin common_logo() {
+  height: 3rem;
   background-image: url('/images/logo.png');
   background-position: 100% 0;
   background-repeat: no-repeat;
-  background-size: 80px 30px;
+  background-size: 8rem 3rem;
 }
 
 .logo {
   @include common_logo;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  width: 80px;
+  width: 8rem;
   cursor: pointer;
   opacity: 0.6;
 
@@ -31,33 +31,32 @@
 }
 
 .logo_animation_wrapper {
+  width: 8rem;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-204%, -50%);
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
   opacity: 0.6;
 
   .text_logo {
     @include common_logo;
-    width: 59px;
-    transform: translate(15%, -50%);
+    width: 5.9rem;
   }
 
   .logo_animation {
-    width: 14px;
-    height: 14px;
-    padding: 2px;
-    box-shadow: inset 0 0 0 2.5px #fff;
+    width: 1.8rem;
+    height: 1.8rem;
+    padding: 0.2rem;
+    margin-left: 0.3rem;
+    box-shadow: inset 0 0 0 0.2rem #fff;
     display: flex;
-    justify-content: space-between;
-    border-radius: 2px;
-    overflow: hidden;
+    border-radius: 0.2rem;
 
     .middle_bar {
-      width: 2px;
-      height: calc(100% - 4px);
-      position: absolute;
-      left: 8px;
+      width: 0.2rem;
+      height: 1.4rem;
       background-color: #fff;
     }
 
@@ -70,7 +69,7 @@
     .animation_bar_right {
       @include common_animation;
       animation-name: animation_bar_right;
-      height: 7px;
+      height: 0.7rem;
     }
   }
 }
@@ -79,31 +78,31 @@
     height: 0;
   }
   10% {
-    height: 7px;
+    height: 0.7rem;
   }
   20% {
     height: 0;
   }
   30% {
-    height: 7px;
+    height: 0.7rem;
   }
   40% {
     height: 0;
   }
   50% {
-    height: 7px;
+    height: 0.7rem;
   }
   60% {
     height: 0;
   }
   70% {
-    height: 7px;
+    height: 0.7rem;
   }
   80% {
     height: 0;
   }
   90% {
-    height: 7px;
+    height: 0.7rem;
   }
   100% {
     height: 0;
@@ -112,36 +111,36 @@
 
 @keyframes animation_bar_right {
   0% {
-    height: 7px;
+    height: 0.7rem;
   }
   10% {
     height: 0;
   }
   20% {
-    height: 7px;
+    height: 0.7rem;
   }
   30% {
     height: 0;
   }
   40% {
-    height: 7px;
+    height: 0.7rem;
   }
   50% {
     height: 0;
   }
   60% {
-    height: 7px;
+    height: 0.7rem;
   }
   70% {
     height: 0;
   }
   80% {
-    height: 7px;
+    height: 0.7rem;
   }
   90% {
     height: 0;
   }
   100% {
-    height: 7px;
+    height: 0.7rem;
   }
 }
