--- a/client/src/components/trello/CreateTrelloItem.scss
+++ b/client/src/components/trello/CreateTrelloItem.scss
@@ -48,7 +48,7 @@
       }
     }
 
-    > .list_name_input {
+    > input.list_name_input {
       width: 100%;
       line-height: 2rem;
       display: block;
