--- a/client/src/components/popover/trello/TrelloPopover.scss
+++ b/client/src/components/popover/trello/TrelloPopover.scss
@@ -48,20 +48,31 @@
             background-color: rgba(9, 30, 66, 0.04);
           }
 
-          .delete_input {
-            width: 200rem;
-            height: 100%;
-          }
-
-          .delete_btn {
-            padding: 0 10px;
+          .delete_form_field {
             height: 3.2rem;
-            font-size: 1.2rem;
-            color: #fff;
-            background-color: #cd3232;
-            text-align: center;
-            line-height: 3.2rem;
-            border-radius: 0.3rem;
+            padding: 0 1.2rem;
+            display: flex;
+
+            input.delete_input {
+              height: 100%;
+              padding: 0.8rem 1.2rem;
+              line-height: 2rem;
+              color: #172b4d;
+              flex-grow: 1;
+              box-shadow: inset 0 0 0 0.2rem #0079bf;
+              background-color: #fff;
+            }
+
+            .delete_btn {
+              padding: 0 10px;
+              font-size: 1.2rem;
+              color: #fff;
+              background-color: #cd3232;
+              text-align: center;
+              line-height: 3.2rem;
+              border-radius: 0.3rem;
+              margin-left: 8px;
+            }
           }
         }
       }
