--- a/client/src/components/main/boards/boardItem/BoardItems.scss
+++ b/client/src/components/main/boards/boardItem/BoardItems.scss
@@ -35,6 +35,7 @@
     background-color: rgba(0, 0, 0, 0.3);
 
     svg {
+      font-size: 1.6rem;
       color: #ffffff;
       position: absolute;
       bottom: 0.6rem;
