--- a/client/src/components/popover/trello/TrelloPopover.scss
+++ b/client/src/components/popover/trello/TrelloPopover.scss
@@ -45,11 +45,12 @@
           }
 
           > .actions_title:hover {
-            background-color: rgba(9, 30, 66, 0.04);
+            background-color: rgba(9, 30, 66, 0.08);
           }
 
           .delete_form_field {
             height: 3.2rem;
+            margin-top: 0.8rem;
             padding: 0 1.2rem;
             display: flex;
 
@@ -64,6 +65,7 @@
             }
 
             .delete_btn {
+              width: 9rem;
               padding: 0 10px;
               font-size: 1.2rem;
               color: #fff;
