--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -14,32 +14,24 @@
   background-color: rgb(176, 70, 50);
 }
 .bg_gray {
-  background-color: rgba(9, 30, 66, 0.04);
+  background-color: rgba(9, 30, 66, 0.08);
 }
 
 @function background($image) {
   @return center / cover no-repeat $image;
 }
 
-.bg-forest {
-  background: background(
-    url('https://images.unsplash.com/photo-1500762728065-466b7a170c96?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')
-  );
+.bg_forest {
+  background: background(url('/images/backgrounds/bg_forest.jpeg'));
 }
-.bg-sandcave {
-  background: background(
-    url('https://images.unsplash.com/photo-1444076784383-69ff7bae1b0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')
-  );
+.bg_sandcave {
+  background: background(url('/images/backgrounds/bg_sandcave.jpeg'));
 }
-.bg-bird {
-  background: background(
-    url('https://images.unsplash.com/photo-1578279043004-e218349bfdfd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')
-  );
+.bg_bird {
+  background: background(url('/images/backgrounds/bg_bird.jpeg'));
 }
-.bg-mountain {
-  background: background(
-    url('https://images.unsplash.com/photo-1493246507139-91e8fad9978e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80')
-  );
+.bg_mountain {
+  background: background(url('/images/backgrounds/bg_mountain.jpeg'));
 }
 
 * {
@@ -105,7 +97,7 @@ button {
 
 button:disabled {
   background-color: #f4f5f7 !important;
-  color: #a5adba;
+  color: #a5adba !important;
   cursor: initial;
 }
 
