--- a/client/src/components/main/board/Board.scss
+++ b/client/src/components/main/board/Board.scss
@@ -13,14 +13,14 @@
         svg {
           width: 2.4rem;
           height: 2.4rem;
-          color: #172b4d;
+          color: var(--dark-blue);
         }
 
         span {
           text-indent: 1rem;
           font-weight: 700;
           font-size: 1.6rem;
-          color: #172b4d;
+          color: var(--dark-blue);
         }
       }
 
