--- a/client/src/hoc/layout/SideBar.scss
+++ b/client/src/hoc/layout/SideBar.scss
@@ -23,7 +23,7 @@
 
         span {
           text-indent: 0.4rem;
-          color: #172b4d;
+          color: var(--dark-blue);
         }
       }
 
