--- a/client/src/shared/btnLoading/BtnLoading.scss
+++ b/client/src/shared/btnLoading/BtnLoading.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     > div {
-      background-color: #fff;
+      background-color: var(--pure-white);
       height: 100%;
       width: 0.2rem;
       display: inline-block;
