--- a/client/src/components/dialog/createBoard/Dialog_create_board.scss
+++ b/client/src/components/dialog/createBoard/Dialog_create_board.scss
@@ -1,5 +1,3 @@
-@import 'util.scss';
-
 .create_board_dialog {
   width: 40rem;
   position: fixed;
@@ -20,7 +18,7 @@
       position: relative;
 
       svg {
-        color: #fff;
+        color: var(--pure-white);
         position: absolute;
         right: 0.5rem;
         top: 0.5rem;
@@ -33,7 +31,7 @@
         height: 2.8rem;
         font-weight: 700;
         background-color: transparent;
-        color: #fff;
+        color: var(--pure-white);
         text-indent: 1rem;
 
         &:hover {
@@ -76,7 +74,7 @@
           svg {
             width: 1rem;
             height: 1rem;
-            color: #fff;
+            color: var(--pure-white);
           }
         }
 
@@ -90,9 +88,5 @@
 
   .bottom_utils {
     margin-top: 0.8rem;
-
-    button[type='submit'].green_submit {
-      @include green_submit(10.4rem);
-    }
   }
 }
