--- a/client/src/components/trello/CreateTrelloItem.scss
+++ b/client/src/components/trello/CreateTrelloItem.scss
@@ -1,5 +1,3 @@
-@import 'util.scss';
-
 @mixin list-wrapper {
   min-width: 27.2rem;
   margin: 0 0.4rem;
@@ -35,7 +33,7 @@
     .place_holder {
       display: flex;
       align-items: center;
-      color: #fff;
+      color: var(--pure-white);
       padding: 0.6rem 0.8rem;
       transition: color 85ms ease-in;
 
@@ -50,14 +48,14 @@
       }
     }
 
-    > input.list_name_input {
+    > input[type='text'].list_name_input {
       width: 100%;
       line-height: 2rem;
       display: block;
       padding: 0.8rem 1.2rem;
-      color: #172b4d;
+      color: var(--dark-blue);
       -webkit-appearance: none;
-      background: #fff;
+      background: var(--pure-white);
       box-shadow: inset 0 0 0 0.2rem #0079bf;
       transition: margin 85ms ease-in, background 85ms ease-in;
     }
@@ -69,10 +67,6 @@
       margin-top: 0.4rem;
       transition: margin 85ms ease-in, height 85ms ease-in;
       overflow: hidden;
-
-      button[type='submit'].green_submit {
-        @include green_submit(8.2rem);
-      }
 
       svg {
         margin-left: 0.6rem;
