--- a/client/src/pages/login/Login.scss
+++ b/client/src/pages/login/Login.scss
@@ -14,7 +14,7 @@
     height: 42rem;
     padding: 2.5rem 4rem;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: var(--pure-white);
     border-radius: 0.3rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0 0 1rem;
 
@@ -46,7 +46,7 @@
       width: 100%;
       height: 3.6rem;
       text-align: center;
-      color: #ffffff;
+      color: var(--pure-white);
       background-color: #5aac44;
       transition: background-color 0.1s;
 
