--- a/client/src/components/trello/trelloItem/trelloPopover/TrelloPopover.scss
+++ b/client/src/components/trello/trelloItem/trelloPopover/TrelloPopover.scss
@@ -7,7 +7,7 @@
   .trello_popover_content {
     background-color: var(--pure-white);
     border-radius: 0.3rem;
-    box-shadow: 0 0.8rem 1.6rem -0.4rem rgba(9, 30, 66, 0.25), 0 0 0 0.1rem rgba(9, 30, 66, 0.08);
+    box-shadow: 0 0.8rem 1.6rem -0.4rem var(--box-shadow), 0 0 0 0.1rem rgba(9, 30, 66, 0.08);
 
     .trello_popover_inner {
       width: 30rem;
@@ -58,7 +58,7 @@
               height: 100%;
               padding: 0.8rem 1.2rem;
               line-height: 2rem;
-              margin-right: .6rem;
+              margin-right: 0.6rem;
               color: var(--dark-blue);
               flex-grow: 1;
               box-shadow: inset 0 0 0 0.2rem #0079bf;
