--- a/client/src/components/trello/trelloItem/createCard/CreateCard.scss
+++ b/client/src/components/trello/trelloItem/createCard/CreateCard.scss
@@ -5,7 +5,7 @@
     padding: 0.6rem 0.8rem 1rem;
     background-color: var(--pure-white);
     border-radius: 0.3rem;
-    box-shadow: 0 0.1rem 0 rgba(9, 30, 66, 0.25);
+    box-shadow: 0 0.1rem 0 var(--box-shadow);
     margin-bottom: 0.8rem;
     min-height: 2rem;
     cursor: pointer;
